# vg-nav

./: .gitignore  LICENSE  README.md
src/autorally_description/urdf/worlds/: postoffice_with_mud12.world
src/diff_drive/launch/: goto_goal.launch
src/vg_nav/: CMakeLists.txt  README.md  package.xml  setup.py
src/vg_nav/cfg/: ThresholdConfig.cfg  rgb_min_max_values
src/vg_nav/config/: nav_pcl.rviz  vg_gpn_real.yaml  vg_nav.yaml
src/vg_nav/launch/: vg_nav.launch  vg_sync.launch
src/vg_nav/scripts/: horizontal_velodyne.py  mask2former_nav_img.py  nav_utils.py  sgp2d.py  vg_nav_node.py  vg_sync_node.py
src/vg_nav/src/: rgb_seg.cpp
src/waypts_nav_pid/: CMakeLists.txt  README.md
src/waypts_nav_pid/cfg/: Params.cfg
src/waypts_nav_pid/launch/: pid_tracking.launch
src/waypts_nav_pid/scripts/: jackal_sim_pid.py  tracking_pid_node.py
src/working_jackal_pkgs/: README.md
src/working_jackal_pkgs/jackal/jackal_control/launch/: control.launch
src/working_jackal_pkgs/jackal/jackal_description/urdf/: jackal.gazebo  jackal.urdf.xacro  realsense.urdf.xacro
src/working_jackal_pkgs/jackal/jackal_description/urdf/accessories/: realsense.urdf.xacro
src/working_jackal_pkgs/jackal_desktop/jackal_viz/rviz/: gp_rocks.rviz  nav_pcl.rviz  seg_gp.rviz  visualize_key_frames.rviz  vsgp_nav.rviz
src/working_jackal_pkgs/jackal_simulator/jackal_gazebo/launch/: postoffice_mud.launch  spawn_jackal.launch
src/working_jackal_pkgs/velodyne_simulator/velodyne_description/urdf/: VLP-16.urdf.xacro
